--- a/public/common.css
+++ b/public/common.css
@@ -10,10 +10,7 @@
   text-decoration: none;
 }
 
-body {
-  padding-top: 50px;
-  /* background: url(./imgs/pixels.png); */
-}
+
 
 blockquote p {
   font-size: 14px;
@@ -78,20 +75,20 @@ blockquote p {
   }
 }
 
-.navbar .count {
-  border-radius: 5px;
-  float: right;
-  margin-top: 3px;
-}
+/*.navbar .count {*/
+/*  border-radius: 5px;*/
+/*  float: right;*/
+/*  margin-top: 3px;*/
+/*}*/
 
-.navbar-brand {
-  padding-top: 5px;
-}
+/*.navbar-brand {*/
+/*  padding-top: 5px;*/
+/*}*/
 
-.navbar .current-category .count {
-  float: none;
-  margin: -2px 6px 0 9px;
-}
+/*.navbar .current-category .count {*/
+/*  float: none;*/
+/*  margin: -2px 6px 0 9px;*/
+/*}*/
 
 #memos {
   min-height: 800px;
