使用svg的图标

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,6 +44,11 @@ a:hover {
 div:focus {
     outline: none;
 }
+.iconfont{
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
 
 .clearfix {
     &:after {
@@ -54,6 +59,9 @@ div:focus {
         clear: both;
         height: 0;
     }
+}
+.mr10{
+    margin-right: 10px;
 }
 .el-main{
     @media screen and(max-width: 500px) {
