完成移动端的编辑框

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,6 +63,9 @@ div:focus {
 .mr10{
     margin-right: 10px;
 }
+.mt10{
+    margin-top: 10px;
+}
 .el-main{
     @media screen and (max-width: 600px) {
         padding: 10px 3px !important;
