--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,22 @@
 @import './transition.scss';
 @import './reset.scss';
 @import './variables.scss';
-body {
+html,body {
     height: 100%;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /*下面是解决ios上去除微信点击蓝色边框 */
+    a:focus,
+    input:focus,
+    p:focus,
+    div:focus {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        -webkit-user-modify: read-write-plaintext-only;
+    }
 }
-
 label {
     font-weight: 700;
 }
